write the cg_gradient notebook

--- a/Content/cg_method.ipynb
+++ b/Content/cg_method.ipynb
@@ -20,190 +20,14 @@
    "source": [
     "### References\n",
     "\n",
+    "* Aster, R. C., Borchers, B., and Thurber, C. H. Parameter Estimation and Inverse Problems, 3rd edition Elsevier Academic Press, 2019, ISBN: 978-0-12-804651-7\n",
+    "\n",
+    "* Shewchuk, J. R. (1994). An introduction to the Conjugate Gradient Method without the agonizing\n",
+    " pain, 1 1/4 ed.: School of Computer Science Carnegie Mellon, University Pittsburgh, [versão pdf](https://www.cs.cmu.edu/~quake-papers/painless-conjugate-gradient.pdf)\n",
+    "\n",
+    "* Kelley, C. T. Iterative methods for optimization, SIAM, 1999, [versão pdf](http://www.siam.org/books/kelley/fr18/)\n",
+    "\n",
     "* Golub, G. H. and C. F. Van Loan, (2013), Matrix computations, 4th edition, Johns Hopkins University Press, ISBN 978-1-4214-0794-4."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Introduction"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Sometimes, the associated matrix of a given linear system is so large that our previous factorization methods are computatinally inefficient. In these cases, a preferable strategy consists in using *iterative methods*. An iterative method for solving"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='eq1'></a>\n",
-    "$$\n",
-    "\\mathbf{A} \\, \\mathbf{p} = \\mathbf{d} \\quad , \\tag{1}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "where $\\mathbf{A}$ is an $N \\times N$ matrix, by generating a sequence of approximate solutions $\\mathbf{p}_{k}$ that converges to the solution"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='eq2'></a>\n",
-    "$$\n",
-    "\\tilde{\\mathbf{p}} = \\mathbf{A}^{-1} \\mathbf{d} \\quad . \\tag{2}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Typically, the matrix $\\mathbf{A}$ is involved only in the context of matrix-vector multiplication and that is what makes this framework attractive when $\\mathbf{A}$ is large and sparse. The critical attributes of an terative method include the rate of convergence, the amount of computation per step, the volume of required storage, and the pattern of memory access (Golub and Van Loan, 2013, p. 611)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Here, our discussion is limited to systems involving symmetric and positive-definite matrices $\\mathbf{A}$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Theoretical aspects"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Solve the linear system above ([equation 1](#eq1)) is equivalent to minimize the quadratic function"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='eq3'></a>\n",
-    "$$\n",
-    "\\Psi(\\mathbf{p}) = \\frac{1}{2}\\mathbf{p}^{\\top}\\mathbf{A}\\mathbf{p} - \\mathbf{p}^{\\top}\\mathbf{d} \\quad , \\tag{3}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "that is convex function. The $j$th element of its gradient is given by"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='eq4a'></a>\n",
-    "$$\n",
-    "\\begin{split}\n",
-    "\\frac{\\partial}{\\partial \\, p_{j}} \\Psi (\\mathbf{p}) \n",
-    "&= \\frac{1}{2}\\mathbf{u}_{j}^{\\top} \\mathbf{A} \\mathbf{p} + \\frac{1}{2}\\mathbf{p}^{\\top} \\mathbf{A} \\mathbf{u}_{j} - \\mathbf{u}_{j}^{\\top} \\mathbf{d} \\\\\n",
-    "&= \\mathbf{u}_{j}^{\\top} \\mathbf{A} \\mathbf{p} - \\mathbf{u}_{j}^{\\top} \\mathbf{d}\n",
-    "\\end{split} \\quad . \\tag{4a}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "By using [equation 4a](#eq4a), we show that the gradient of $\\Psi(\\mathbf{p})$ ([equation 3](#eq3)) is given by"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='eq4b'></a>\n",
-    "$$\n",
-    "\\nabla \\Psi(\\mathbf{p}) = \\mathbf{A}\\mathbf{p} - \\mathbf{d} \\quad . \\tag{4b}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Steepest decent method with exact line search"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Given an approximation $\\mathbf{p}_{0}$ for $\\tilde{\\mathbf{p}}$ ([equation 2](#eq2)), we can compute a new vector $\\mathbf{p}_{1}$ given by"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='eq5'></a>\n",
-    "$$\n",
-    "\\mathbf{p}_{1} = \\mathbf{p}_{0} - \\mu \\, \\nabla \\Psi(\\mathbf{p}_{0}) \\quad , \\tag{5}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "where $\\nabla \\Psi(\\mathbf{p}_{0})$ is the gradient of $\\Psi(\\mathbf{p})$ ([equation 4](#eq4)) evaluated at $\\mathbf{p}_{0}$ and $\\mu$ is a positive constant minimizing "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='eq6'></a>\n",
-    "$$\n",
-    "\\Psi \\left( \\mathbf{p}_{0} - \\mu \\nabla \\Psi(\\mathbf{p}_{0}) \\right) \\quad . \\tag{6}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Estimating a parameter $\\tilde{\\mu}$ minimizing [equation 6](#eq6) represents an *exact line search* problem (Golub an Van Loan, 2013, p. 627). It can be show that "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='eq7'></a>\n",
-    "$$\n",
-    "\\tilde{\\mu} = \\frac{\\nabla \\Psi(\\mathbf{p}_{0})^{\\top}\\nabla \\Psi(\\mathbf{p}_{0})}\n",
-    "{\\nabla \\Psi(\\mathbf{p}_{0})^{\\top} \\, \\mathbf{A} \\, \\nabla \\Psi(\\mathbf{p}_{0})} \\quad . \\tag{7}\n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Conjugate gradient method for symmetric positive-definite systems"
    ]
   },
   {
@@ -219,6 +43,197 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conjugate gradient method for symmetric positive-definite systems"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The *conjugate gradient method* solves the linear system"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq1'></a>\n",
+    "$$\n",
+    "\\mathbf{A} \\, \\mathbf{x} = \\mathbf{b} \\quad , \\tag{1}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where $\\mathbf{A}$ is an $N \\times N$ symmetric and positive definite matrix, by generating a sequence of approximate solutions $\\mathbf{x}_{k}$ that converges to"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq2'></a>\n",
+    "$$\n",
+    "\\tilde{\\mathbf{x}} = \\mathbf{A}^{-1} \\mathbf{b} \\quad . \\tag{2}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The solution $\\tilde{\\mathbf{x}}$ is represented by:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq3'></a>\n",
+    "$$\n",
+    "\\tilde{\\mathbf{x}} = \\sum\\limits_{k = 0}^{N-1} \\alpha_{k} \\mathbf{p}_{k} \\quad , \\tag{3}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where vectors $\\mathbf{p}_{k}$, $k = 0, \\dots, N-1$, satisfy the condition"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq4'></a>\n",
+    "$$\n",
+    "\\mathbf{p}_{i}^{\\top}\\mathbf{A}\\mathbf{p}_{j} = 0 \\quad , \\quad  \\text{for any} \\:\\: i \\ne j \\quad , \\tag{4}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "and $\\alpha_{k}$ are constants that we will define later. The approximating solution $\\mathbf{x}_{k+1}$ depends on the previous solution $\\mathbf{x}_{k}$ according to:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq5'></a>\n",
+    "$$\n",
+    "\\mathbf{x}_{k+1} = \\mathbf{x}_{k} + \\alpha_{k} \\mathbf{p}_{k} \\quad . \\tag{5}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The vector $\\mathbf{p}_{k+1}$ depends on vector $\\mathbf{p}_{k}$ according to:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq6'></a>\n",
+    "$$\n",
+    "\\mathbf{p}_{k+1} = \\mathbf{r}_{k+1} + \\beta_{k} \\mathbf{p}_{k} \\quad , \\tag{6}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where $\\beta_{k}$, $k = 0, \\dots, N-1$, are constants defined later and $\\mathbf{r}_{k+1}$ is the residuals vector"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq7'></a>\n",
+    "$$\n",
+    "\\begin{split}\n",
+    "\\mathbf{r}_{k+1} \n",
+    "&= \\mathbf{b} - \\mathbf{A} \\, \\mathbf{x}_{k+1} \\\\\n",
+    "&= \\mathbf{b} - \\mathbf{A} \\left( \\mathbf{x}_{k} + \\alpha_{k}\\mathbf{p}_{k} \\right) \\\\\n",
+    "&= \\left( \\mathbf{b} - \\mathbf{A} \\, \\mathbf{x}_{k} \\right) - \\alpha_{k} \\mathbf{A} \\, \\mathbf{p}_{k} \\\\\n",
+    "&= \\mathbf{r}_{k} - \\alpha_{k} \\mathbf{A} \\, \\mathbf{p}_{k}\n",
+    "\\end{split} \\quad , \\tag{7}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "and $\\mathbf{r}_{k} = \\mathbf{b} - \\mathbf{A} \\, \\mathbf{x}_{k}$ is the residuals vector produced by the approximating solution $\\mathbf{x}_{k}$. the constants $\\alpha_{k}$ (equations [3](#eq3), [5](#eq5), [7](#eq7)) and $\\beta_{k}$ ([equation 6](#eq6)) are defined so that the following conditions are satisfied:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. $\\mathbf{r}_{k+1}^\\top \\mathbf{r}_{i} = 0 \\quad$ ;\n",
+    "2. $\\mathbf{r}_{k+1}^\\top \\mathbf{r}_{k} = 0 \\quad$ ;\n",
+    "3. $\\mathbf{r}_{k+1}^\\top \\mathbf{p}_{i} = 0 \\quad$ ;\n",
+    "4. $\\mathbf{p}_{k+1}^\\top \\mathbf{A} \\mathbf{p}_{i} = 0 \\quad$ ([equation 4](#eq4)) ;\n",
+    "5. $\\mathbf{p}_{k+1}^\\top \\mathbf{A} \\mathbf{p}_{k} = 0 \\quad$ ([equation 4](#eq4)) ;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where $i = 0, \\dots, k$. It can be shown that the constants $\\alpha_{k}$ and $\\beta_{k}$ satisfying the conditions above are given by (Aster et al., 2019, p. 160-164):"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq8'></a>\n",
+    "$$\n",
+    "\\alpha_{k} = \\frac{\\mathbf{r}_{k}^{\\top}\\mathbf{r}_{k}}{\\mathbf{p}_{k}^{\\top}\\mathbf{A}\\mathbf{p}_{k}} \\tag{8}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "and"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq9'></a>\n",
+    "$$\n",
+    "\\beta_{k} = \\frac{\\mathbf{r}_{k}^{\\top}\\mathbf{r}_{k}}{\\mathbf{r}_{k+1}^{\\top}\\mathbf{r}_{k+1}} \\quad . \\tag{9}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The cell below contains an implementation of the *conjugate gradient method* (Golub and Van Loan, 2013, modified Algorithm 11.3.3, p. 635)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -227,7 +242,8 @@
     "def cg_method(A, dobs, p0, tol):\n",
     "    '''\n",
     "    Solve a positive-definite linear system by using the \n",
-    "    conjugate gradient method.\n",
+    "    conjugate gradient method (Golub and Van Loan, 2013,\n",
+    "    modified Algorithm 11.3.3, p. 635).\n",
     "    \n",
     "    Parameters:\n",
     "    -----------\n",
@@ -299,6 +315,13 @@
     "    dpred = np.dot(A,p)\n",
     "\n",
     "    return p, dpred, residuals_norm_values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Application to synthetic data"
    ]
   },
   {
@@ -563,15 +586,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The *conjugate gradient method* method by itself can only be applied to positive definite systems of equations, and is thus not directly applicable to general least squares problems (Aster et al., 2019, p. 165). However, simple modifications in the previous algorithm can be made in order to solve a least squares problem. This modified version are called *conjugate gradient least squares* (CGLS) method (Aster et al., 2019, 165) or *conjugate gradient normal equation residual* (CGNR) method (Golub and Van Loan, 2013, modified Algorithm 11.3.3 according to Figure 11.3.1, p. 637)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "def cgnr_method(A, dobs, p0, tol):\n",
     "    '''\n",
     "    Solve a linear system by using the conjugate gradient \n",
-    "    normal equation residual method.\n",
+    "    normal equation residual method (Golub and Van Loan, 2013,\n",
+    "    modified Algorithm 11.3.3 according to Figure 11.3.1 ,\n",
+    "    p. 637).\n",
     "    \n",
     "    Parameters:\n",
     "    -----------\n",
@@ -649,6 +681,13 @@
     "    dpred = np.dot(A,p)\n",
     "\n",
     "    return p, dpred, residuals_norm_values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Application to synthetic data"
    ]
   },
   {
