fix equation and change figure paths

--- a/Content/epicenter.ipynb
+++ b/Content/epicenter.ipynb
@@ -32,7 +32,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='epicenter_figs\\fig1.png' width=700>"
+    "<img src='epicenter_figs/fig1.png' width=700>"
    ]
   },
   {
@@ -48,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src='epicenter_figs\\fig2.png' width=700>"
+    "<img src='epicenter_figs/fig2.png' width=700>"
    ]
   },
   {
@@ -370,8 +370,7 @@
    "source": [
     "<a id='eq15a'></a>\n",
     "$$\n",
-    "\\mathbf{H}(\\mathbf{p}) = 2 \\, \\mathbf{G}(\\mathbf{p})^{\\top}\\mathbf{G}(\\mathbf{p})\n",
-    "- 2 \\sum\\limits_{i = 0}^{N - 1} \\mathbf{H}_{i}(\\mathbf{p}) \\left( d_{i} - \\Delta t_{i}^{o} \\right) \\tag{15a}\n",
+    "\\mathbf{H}(\\mathbf{p}) = 2 \\, \\mathbf{G}(\\mathbf{p})^{\\top}\\mathbf{G}(\\mathbf{p}) - 2 \\sum\\limits_{i = 0}^{N - 1} \\mathbf{H}_{i}(\\mathbf{p}) \\left( d_{i} - \\Delta t_{i}^{o} \\right) \\tag{15a}\n",
     "$$"
    ]
   },
