--- a/Content/first_steps_Python/templates.ipynb
+++ b/Content/first_steps_Python/templates.ipynb
@@ -16,7 +16,7 @@
     "    import package_bli as pckbli\n",
     "\n",
     "\n",
-    "    def my_function():\n",
+    "    def my_function(input1, input2):\n",
     "\n",
     "        '''\n",
     "        Description of the function.\n",
