review scalar_vector

--- a/Content/scalar_vector.ipynb
+++ b/Content/scalar_vector.ipynb
@@ -76,7 +76,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let $a = a_{R} + imag \\; a_{I}$ be a complex number and $\\mathbf{x} = \\mathbf{x}_{R} + imag \\; \\mathbf{x}_{I}$ be an $N \\times 1$ complex vector, where $imag = \\sqrt{-1}$ representes the imaginary unit. The product of $a$ and $\\mathbf{x}$ can be defined as follows:"
+    "Let $a = a_{R} + imag \\; a_{I}$ be a complex number and $\\mathbf{x} = \\mathbf{x}_{R} + imag \\; \\mathbf{x}_{I}$ be an $N \\times 1$ complex vector, where $imag = \\sqrt{-1}$ represents the imaginary unit. The product of $a$ and $\\mathbf{x}$ results in a complex vector $\\mathbf{y}$ given by:"
    ]
   },
   {
@@ -131,7 +131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    scalar_vec_complex(a_R, a_I, x_R, x_I):\n",
+    "    scalar_vec_complex(a, x):\n",
     "        \n",
     "        # number of elements of x\n",
     "        N = size(x)\n",
@@ -141,13 +141,14 @@
     "        y_I = zeros(N)\n",
     "        \n",
     "        # compute the real and imaginary parts of the product\n",
-    "        y_R  = scalar_vec_real(a_R, x_R)\n",
-    "        y_R -= scalar_vec_real(a_I, x_I)\n",
-    "        y_I  = scalar_vec_real(a_R, x_I)\n",
-    "        y_I += scalar_vec_real(a_I, x_R)\n",
+    "        y_R  = scalar_vec_real(Re(a), Re(x))\n",
+    "        y_R -= scalar_vec_real(Im(a), Im(x))\n",
+    "        y_I  = scalar_vec_real(Re(a), Im(x))\n",
+    "        y_I += scalar_vec_real(Im(a), Re(x))\n",
+    "        y = y_R + imag*y_I\n",
     "        \n",
     "        # return the result        \n",
-    "        return y_R, y_I"
+    "        return y"
    ]
   },
   {
