--- a/Content/dot.ipynb
+++ b/Content/dot.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Real dot product"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Let $\\mathbf{x}$ and $\\mathbf{y}$ be two $N \\times 1$ real vectors defined as follows:"
    ]
   },
@@ -73,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that the result is a scalar."
+    "Notice that the result is a scalar (real number)."
    ]
   },
   {
@@ -87,9 +94,100 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    c = 0\n",
-    "    for i = 0:N-1\n",
-    "        c = c + x[i]*y[i]"
+    "    dot_real(x, y):\n",
+    "        \n",
+    "        # number of elements of x\n",
+    "        N = size(x)\n",
+    "        \n",
+    "        # compute the product\n",
+    "        c = 0\n",
+    "        for i = 0:N-1\n",
+    "            c += x[i]*y[i]\n",
+    "        \n",
+    "        # return the result\n",
+    "        return c"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Complex dot product"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let $\\mathbf{x} = \\mathbf{x}_{R} + imag \\; \\mathbf{x}_{I}$ and $\\mathbf{y} = \\mathbf{y}_{R} + imag \\; \\mathbf{y}_{I}$ be two $N \\times 1$ complex vectors, where $imag = \\sqrt{-1}$ represents the imaginary unit. The dot product of $\\mathbf{x}$ and $\\mathbf{y}$ results in a complex number $c$ given by:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "c = c_{R} + imag \\; c_{I} \\quad ,\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "c_{R} = \\mathbf{x}_{R}^{\\top} \\mathbf{y}_{R} - \\mathbf{x}_{I}^{\\top} \\mathbf{y}_{I}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "and"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "c_{I} = \\mathbf{x}_{R}^{\\top} \\mathbf{y}_{I} + \\mathbf{x}_{I}^{\\top} \\mathbf{y}_{R} \\quad .\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A pseudo-code for this product can be defined as follows:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    dot_complex(a, x):\n",
+    "        \n",
+    "        # number of elements of x\n",
+    "        N = size(x)\n",
+    "\n",
+    "        # compute the real and imaginary parts of the product\n",
+    "        c_R  = dot_real(Re(x), Re(y))\n",
+    "        c_R -= dot_real(Im(x), Im(y))\n",
+    "        c_I  = dot_real(Re(x), Im(y))\n",
+    "        c_I += dot_real(Im(x), Re(y))\n",
+    "        c = c_R + imag*c_I\n",
+    "        \n",
+    "        # return the result        \n",
+    "        return c"
    ]
   },
   {
@@ -103,103 +201,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Create a function called `dot` that receives two numpy arrays and computes the dot product according to the algorithm shown above. The numpy arrays must have the same size (hint: use an `assert` to verify the input). The function must be written in your `my_functions.py` file, according to the template shown below.\n",
-    "2. Create 3 automatic tests in your `test_my_functions.py` file, according to the template shown below. One of the tests must compare the result obtained by your function and the result obtained by using the function [`numpy.dot`](https://docs.scipy.org/doc/numpy/reference/generated/numpy.dot.html). Another test must set a specific input and compare the result obtained by your function and the expected result. The last test must verify if your function raises an AssertionError, given a specific input."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Timing the code"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "How fast is your code?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import my_functions as mf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c = 23.\n",
-    "x = np.random.rand(1000)\n",
-    "y = np.random.rand(1000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "275 µs ± 11.5 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%timeit -n 10000 mf.dot(x, y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The slowest run took 8.27 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
-      "1.95 µs ± 2.43 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%timeit -n 10000 np.dot(x, y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7.86 µs ± 934 ns per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%timeit -n 10000 np.sum(x*y)"
+    "Create the functions below according to `template.py`: \n",
+    "* `dot_real_dumb`\n",
+    "* `dot_real_numpy`\n",
+    "* `dot_real_numba` \n",
+    "* `dot_complex` \n",
+    "    \n",
+    "These functions must pass the following tests defined in `tests_template.py`:\n",
+    "* `test_dot_real_not_1D_arrays`\n",
+    "* `test_dot_real_different_sizes`\n",
+    "* `test_dot_real_known_values`\n",
+    "* `test_dot_real_compare_numpy_dot`\n",
+    "* `test_dot_real_commutativity`\n",
+    "* `test_dot_real_distributivity`\n",
+    "* `test_dot_real_scalar_multiplication`\n",
+    "* `test_dot_complex_compare_numpy_dot`\n",
+    "* `test_dot_complex_compare_numpy_vdot`\n",
+    "* `test_dot_complex_invalid_function`"
    ]
   },
   {
